# cornell-mcray

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bake.cmd  bake.sh
.cargo/: config
assets/car/: license.txt  wheel_left.glb  wheel_right.glb
assets/track/: cube.glb  lights.gltf  occluder.gltf  track.gltf
src/: car.rs  game.rs  main.rs  physics.rs
